k8s_cookbook/chapter5/simple-nginx-svc.yaml
kind: Service
apiVersion: v1
metadata: 
  name:  webserver
spec:
  ports:
  - port: 80
  selector:
    app: nginx
