k8s_cookbook/chapter5/nginx-ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: nginx-public
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
 rules:
 - host:
 http:
   paths:
   -path:  /web
      backend:
       serviceName: nginx
       servicePort: 80
